--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
